@@ -1,3 +1,6 @@
+2009-08-22
+Feature useragent implemented! But not tested!
+
 2009-08-11
 Same this than yesterday. I didn't think that this feature would have needed as much time...
 
